@@ -18,6 +18,8 @@ ikiwiki (2.65) UNRELEASED; urgency=low
     characters, in addition to the existing check for pruned filenames.
   * Print a debug message if a page has multiple source files.
   * Add keepextension parameter to htmlize hook. (Willu)
+  * rename, remove: Don't rely on a form parameter to tell whether the page
+    should be treated as an attachment.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 17 Sep 2008 14:26:56 -0400
 
